# uquery

./: README.md  pyproject.toml  tox.ini
tests/backends/doris/: conftest.py  test_stream_load.py  test_window_function.py
uquery/: __init__.py  configuration.py  dialect.py  engine.py  funcs.py  util.py
uquery/backends/doris/: compiler_sa.py  datatype.py  doris_backend.py  registry.py  stream_loader.py
uquery/backends/doris/compiler/: core.py  values.py
